# axum-yew-rust-test

./: .gitignore  Cargo.toml
frontend/: Cargo.toml  index.html  style.css
frontend/src/: form.rs  main.rs  products.rs  router.rs
server/: Cargo.toml
server/src/: handlers.rs  main.rs
