[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
serde = "1.0.197"
serde_json = "1.0.114"
wasm-bindgen-futures = "0.4.42"
reqwest = { version = "0.12.0", features = ["json" ] }
web-sys = { version = "0.3.69", features = ["HtmlInputElement"] }
gloo-console = "0.3.0"